--- a/output/Hungry-Move-6603.html
+++ b/output/Hungry-Move-6603.html
@@ -195,12 +195,12 @@
         <h1>Hungry-Move-6603</h1>
         <hr>
         <div class="info-list">
-          <p><strong>Age:</strong> 33</p>
-          <p><strong>Occupation:</strong> Engineer</p>
-          <p><strong>Status:</strong> Learning</p>
-          <p><strong>Location:</strong> Remote</p>
-          <p><strong>Tier:</strong> Regular</p>
-          <p><strong>Archetype:</strong> The Analyst</p>
+          <p><strong>Age:</strong> 28</p>
+          <p><strong>Occupation:</strong> Writer</p>
+          <p><strong>Status:</strong> Exploring</p>
+          <p><strong>Location:</strong> Mumbai</p>
+          <p><strong>Tier:</strong> Newbie</p>
+          <p><strong>Archetype:</strong> The Explorer</p>
           <hr>
           <p><strong>Traits:</strong></p>
           <div class="trait-grid">
