--- a/output/Hungry-Move-6603.html
+++ b/output/Hungry-Move-6603.html
@@ -187,7 +187,7 @@
       <!-- Left Column -->
       <div class="column left-column">
         <img src="https://styles.redditmedia.com/t5_47n5yc/styles/profileIcon_snoo-nftv2_bmZ0X2VpcDE1NToxMzdfN2Q3YWFmMDNlYTUxYmMxNjU4ZTkzNWE4YWQwOWQ3N2Y4OWExZjI1MF8xNzUzNTU_rare_d1f3aa18-4e55-418e-b6c1-4c375d5b9aad-headshot.png?width=256&height=256&crop=256:256,smart&s=fe94a1e273b732022900fab1cc0bc9a5063da1e5" alt="Hungry-Move-6603" />
-        <div class="quote">I want to spend less time ordering a healthy takeaway and more time enjoying my meal.</div>
+        <div class="quote">“I want to spend less time ordering a healthy takeaway and more time enjoying my meal.”</div>
       </div>
 
       <!-- Middle Column -->
@@ -195,12 +195,12 @@
         <h1>Hungry-Move-6603</h1>
         <hr>
         <div class="info-list">
-          <p><strong>Age:</strong> 28</p>
-          <p><strong>Occupation:</strong> Writer</p>
-          <p><strong>Status:</strong> Exploring</p>
+          <p><strong>Age:</strong> 23</p>
+          <p><strong>Occupation:</strong> Designer</p>
+          <p><strong>Status:</strong> Busy</p>
           <p><strong>Location:</strong> Mumbai</p>
-          <p><strong>Tier:</strong> Newbie</p>
-          <p><strong>Archetype:</strong> The Explorer</p>
+          <p><strong>Tier:</strong> Early Adopter</p>
+          <p><strong>Archetype:</strong> The Helper</p>
           <hr>
           <p><strong>Traits:</strong></p>
           <div class="trait-grid">
